@@ -19,6 +19,8 @@
 #include "ompi_config.h"
 
 #include "mpi/f77/bindings.h"
+#include "ompi/mpi/f77/strings.h"
+#include "ompi/file/file.h"
 
 #if OMPI_HAVE_WEAK_SYMBOLS && OMPI_PROFILE_LAYER
 #pragma weak PMPI_REGISTER_DATAREP = mpi_register_datarep_f
@@ -31,8 +33,8 @@ OMPI_GENERATE_F77_BINDINGS (PMPI_REGISTER_DATAREP,
                            pmpi_register_datarep_,
                            pmpi_register_datarep__,
                            pmpi_register_datarep_f,
-                           (char *datarep, void *read_conversion_fn, void *write_conversion_fn, void *dtype_file_extent_fn, MPI_Fint *extra_state, MPI_Fint *ierr),
-                           (datarep, read_conversion_fn, write_conversion_fn, dtype_file_extent_fn, extra_state, ierr) )
+                           (char *datarep, void *read_conversion_fn, void *write_conversion_fn, void *dtype_file_extent_fn, MPI_Fint *extra_state, MPI_Fint *ierr, int datarep_len),
+                           (datarep, read_conversion_fn, write_conversion_fn, dtype_file_extent_fn, extra_state, ierr, datarep_len) )
 #endif
 
 #if OMPI_HAVE_WEAK_SYMBOLS
@@ -48,8 +50,8 @@ OMPI_GENERATE_F77_BINDINGS (MPI_REGISTER_DATAREP,
                            mpi_register_datarep_,
                            mpi_register_datarep__,
                            mpi_register_datarep_f,
-                           (char *datarep, void *read_conversion_fn, void *write_conversion_fn, void *dtype_file_extent_fn, MPI_Fint *extra_state, MPI_Fint *ierr),
-                           (datarep, read_conversion_fn, write_conversion_fn, dtype_file_extent_fn, extra_state, ierr) )
+                           (char *datarep, void *read_conversion_fn, void *write_conversion_fn, void *dtype_file_extent_fn, MPI_Fint *extra_state, MPI_Fint *ierr, int datarep_len),
+                           (datarep, read_conversion_fn, write_conversion_fn, dtype_file_extent_fn, extra_state, ierr, datarep_len) )
 #endif
 
 
@@ -66,18 +68,29 @@ union local_type_convert {
 void mpi_register_datarep_f(char *datarep, void *read_conversion_fn,
 			    void *write_conversion_fn,
 			    void *dtype_file_extent_fn, MPI_Fint *extra_state,
-			    MPI_Fint *ierr)
+			    MPI_Fint *ierr, int datarep_len)
 {
+   char *c_datarep;
+   int c_err, ret;
+   union local_type_convert a, b, c;
+
+    /* Convert the fortran string */
+    if (OMPI_SUCCESS != (ret = ompi_fortran_string_f2c(datarep, datarep_len,
+                                                       &c_datarep))) {
+        c_err = OMPI_ERRHANDLER_INVOKE(MPI_FILE_NULL, ret, "MPI_FILE_SET_VIEW");
+        *ierr = OMPI_INT_2_FINT(c_err);
+        return;
+    }
+
     /* Do a little type shifting so that we don't get compiler
        warnings */
-
-    union local_type_convert a, b, c;
-
     a.voidp = read_conversion_fn;
     b.voidp = write_conversion_fn;
     c.voidp = dtype_file_extent_fn;
 
-    *ierr = OMPI_INT_2_FINT(MPI_Register_datarep(datarep, a.convertp, 
+    *ierr = OMPI_INT_2_FINT(MPI_Register_datarep(c_datarep, a.convertp, 
                                                  b.convertp, c.extentp,
                                                  extra_state));
+
+    free(c_datarep);
 }
